# multimodal_analyzer

./: .coverage  .env.example  .gitignore  CLAUDE.md  CLI_IMPLEMENTATION_PLAN.md  MANIFEST.in  README.md  config.yaml.example  custom_system_prompt.md  pyproject.toml  results.json  test_click_behavior.py
examples/: audio_analysis_examples.py  batch_processing_cli_demo.py  batch_processing_demo.py  genai_python_video.py  sample_usage.py
product_design/tasks/: TASK_CREATION_GUIDE.md  hybrid_file_input_support.md
src/media_analyzer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/media_analyzer_cli/: __init__.py  audio_analyzer.py  cli.py  config.py  image_analyzer.py
src/media_analyzer_cli/models/: litellm_model.py
src/media_analyzer_cli/utils/: __init__.py  audio.py  image.py  output.py  video.py
src/multimodal_analyzer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/multimodal_analyzer_cli/: __init__.py  audio_analyzer.py  cli.py  config.py  image_analyzer.py  video_analyzer.py
src/multimodal_analyzer_cli/auth/: __init__.py  google_auth.py  oauth_manager.py  token_storage.py
src/multimodal_analyzer_cli/models/: __init__.py  litellm_model.py
src/multimodal_analyzer_cli/prompts/: audio_system_prompt.md  image_system_prompt.md  video_system_prompt.md
src/multimodal_analyzer_cli/utils/: file_discovery.py  output.py  prompts.py  streaming.py  video.py
tasks/: CLAUDE.md  video_analysis_implementation_plan.md
tests/: README.md  __init__.py  test_audio_analyzer.py  test_cli.py  test_cli_audio.py  test_cli_video.py  test_image_analyzer.py  test_models.py  test_streaming.py  test_utils.py  test_video_analyzer.py
